@startuml
'https://SubscriptionServicetuml.com/class-diagram

hide circle

title US13 Class Diagram
hide circle



class UserController #F2AA4CFF/CE4A7EFF {
}

class UserService #F2AA4CFF/CE4A7EFF{
+getUserByReaderNumber(int readerNumber):void
}

interface UserRepository <<interface>> #F2AA4CFF/CE4A7EFF{
+getUserByReaderNumber(int readerNumber)
+getUserDetails():Result
}


class User #F2AA4CFF/CE4A7EFF{
-name
-email
-dateOfBirth
-phoneNumber
-GDPR
-role
}

class Role #F2AA4CFF/CE4A7EFF {
-librarian
-reader
}



UserController..> UserService:uses
UserService ..>  UserRepository:uses
UserRepository "1" -->"0..*" User: Records
User "1" -right- "1" Role : > have
@enduml
